Implement related posts api
