# src/gen/http/openapi.yaml
@@ -43,6 +43,35 @@ paths:
       - http
       security:
       - api_key_header_Authorization: []
+  /posts/related:
+    get:
+      tags:
+      - posts
+      summary: relatedPosts posts
+      description: get related blog posts
+      operationId: posts#relatedPosts
+      parameters:
+      - name: url
+        in: query
+        description: post's url
+        required: true
+        type: string
+      - name: count
+        in: query
+        description: count
+        required: false
+        type: integer
+        default: 5
+      responses:
+        "200":
+          description: OK response.
+          schema:
+            $ref: '#/definitions/PostsRelatedPostsResponseBody'
+            required:
+            - posts
+            - count
+      schemes:
+      - http
   /posts/search:
     get:
       tags:
@@ -100,25 +129,25 @@ definitions:
       description:
         type: string
         description: Post's description
-        example: Non sunt architecto unde et ea facilis.
+        example: Et recusandae cupiditate dolores voluptatibus quas vero.
       id:
         type: string
         description: Post's id
-        example: Repudiandae et.
+        example: Fugiat hic neque quo modi.
       screenImageUrl:
         type: string
         description: Post's screen image url
-        example: Labore quas sed.
+        example: Sit qui nesciunt in odio fugiat.
       title:
         type: string
         description: Post's title
-        example: Et omnis ut sequi est qui omnis.
+        example: Non quaerat.
     description: PostOutputResponseBody result type (default view)
     example:
-      description: Recusandae cupiditate.
-      id: Quo perspiciatis fugiat hic.
-      screenImageUrl: Voluptatibus quas vero consequatur sit.
-      title: Quo modi id non quaerat quis.
+      description: Quae ipsa quaerat minus.
+      id: Modi quibusdam temporibus quod facilis.
+      screenImageUrl: Animi quam voluptatem et commodi maiores quidem.
+      title: Iure incidunt occaecati.
     required:
     - id
     - title
@@ -131,18 +160,18 @@ definitions:
       $ref: '#/definitions/PostOutputResponseBody'
     description: PostOutputCollectionResponseBody is the result type for an array of PostOutputResponseBody (default view)
     example:
-    - description: Sunt iure incidunt.
-      id: In odio fugiat et modi.
-      screenImageUrl: Consectetur quae ipsa quaerat minus.
-      title: Temporibus quod.
-    - description: Sunt iure incidunt.
-      id: In odio fugiat et modi.
-      screenImageUrl: Consectetur quae ipsa quaerat minus.
-      title: Temporibus quod.
-    - description: Sunt iure incidunt.
-      id: In odio fugiat et modi.
-      screenImageUrl: Consectetur quae ipsa quaerat minus.
-      title: Temporibus quod.
+    - description: Enim architecto ea est.
+      id: Officiis provident et excepturi.
+      screenImageUrl: Nam neque.
+      title: Iusto accusantium nemo.
+    - description: Enim architecto ea est.
+      id: Officiis provident et excepturi.
+      screenImageUrl: Nam neque.
+      title: Iusto accusantium nemo.
+    - description: Enim architecto ea est.
+      id: Officiis provident et excepturi.
+      screenImageUrl: Nam neque.
+      title: Iusto accusantium nemo.
   PostParamsRequestBody:
     title: PostParamsRequestBody
     type: object
@@ -150,29 +179,29 @@ definitions:
       body:
         type: string
         description: Post's body
-        example: Perspiciatis necessitatibus ab dolor.
+        example: Quia suscipit aut.
       description:
         type: string
         description: Post's description
-        example: A hic delectus sit animi velit unde.
+        example: Recusandae quia sit porro repellendus et non.
       id:
         type: string
         description: Post's id
-        example: Et animi est architecto eos minus.
+        example: Unde autem est autem non.
       screenImageUrl:
         type: string
         description: Post's screen image url
-        example: Est autem.
+        example: Nostrum nobis ratione rerum corrupti ipsam.
       title:
         type: string
         description: Post's title
-        example: Ea esse corrupti molestiae.
+        example: Necessitatibus ab.
     example:
-      body: Perferendis blanditiis.
-      description: Nostrum nobis ratione rerum corrupti ipsam.
-      id: Quia sit porro.
-      screenImageUrl: Quia suscipit aut.
-      title: Et non.
+      body: Labore quas sed.
+      description: Ut sequi est qui omnis.
+      id: Perferendis blanditiis.
+      screenImageUrl: Non sunt architecto unde et ea facilis.
+      title: Quo aliquam repudiandae et enim et.
   PostsRegisterRequestBody:
     title: PostsRegisterRequestBody
     type: object
@@ -182,47 +211,74 @@ definitions:
         items:
           $ref: '#/definitions/PostParamsRequestBody'
         example:
-        - body: Voluptatibus corrupti possimus.
-          description: Ullam pariatur debitis asperiores quasi aut tenetur.
-          id: Nostrum autem facilis ipsam nemo voluptatem est.
-          screenImageUrl: Libero sint voluptatem voluptatem possimus.
-          title: Laboriosam assumenda veritatis.
-        - body: Voluptatibus corrupti possimus.
-          description: Ullam pariatur debitis asperiores quasi aut tenetur.
-          id: Nostrum autem facilis ipsam nemo voluptatem est.
-          screenImageUrl: Libero sint voluptatem voluptatem possimus.
-          title: Laboriosam assumenda veritatis.
-        - body: Voluptatibus corrupti possimus.
-          description: Ullam pariatur debitis asperiores quasi aut tenetur.
-          id: Nostrum autem facilis ipsam nemo voluptatem est.
-          screenImageUrl: Libero sint voluptatem voluptatem possimus.
-          title: Laboriosam assumenda veritatis.
+        - body: Harum molestiae nemo quo.
+          description: Tenetur autem libero sint voluptatem.
+          id: Est ipsa laboriosam assumenda veritatis sapiente ullam.
+          screenImageUrl: Possimus illo voluptatibus corrupti.
+          title: Debitis asperiores quasi.
+        - body: Harum molestiae nemo quo.
+          description: Tenetur autem libero sint voluptatem.
+          id: Est ipsa laboriosam assumenda veritatis sapiente ullam.
+          screenImageUrl: Possimus illo voluptatibus corrupti.
+          title: Debitis asperiores quasi.
         minItems: 1
     example:
       posts:
-      - body: Voluptatibus corrupti possimus.
-        description: Ullam pariatur debitis asperiores quasi aut tenetur.
-        id: Nostrum autem facilis ipsam nemo voluptatem est.
-        screenImageUrl: Libero sint voluptatem voluptatem possimus.
-        title: Laboriosam assumenda veritatis.
+      - body: Harum molestiae nemo quo.
+        description: Tenetur autem libero sint voluptatem.
+        id: Est ipsa laboriosam assumenda veritatis sapiente ullam.
+        screenImageUrl: Possimus illo voluptatibus corrupti.
+        title: Debitis asperiores quasi.
     required:
     - posts
+  PostsRelatedPostsResponseBody:
+    title: PostsRelatedPostsResponseBody
+    type: object
+    properties:
+      count:
+        type: integer
+        example: 17815395042763388373
+        format: int64
+      posts:
+        $ref: '#/definitions/PostOutputResponseBodyCollection'
+    example:
+      count: 4894117250138250688
+      posts:
+      - description: Assumenda nesciunt nesciunt quasi voluptates perferendis.
+        id: Qui nihil.
+        screenImageUrl: Tempore voluptas cumque voluptatem aut facere.
+        title: Alias incidunt sunt ut veniam.
+      - description: Assumenda nesciunt nesciunt quasi voluptates perferendis.
+        id: Qui nihil.
+        screenImageUrl: Tempore voluptas cumque voluptatem aut facere.
+        title: Alias incidunt sunt ut veniam.
+      - description: Assumenda nesciunt nesciunt quasi voluptates perferendis.
+        id: Qui nihil.
+        screenImageUrl: Tempore voluptas cumque voluptatem aut facere.
+        title: Alias incidunt sunt ut veniam.
+      - description: Assumenda nesciunt nesciunt quasi voluptates perferendis.
+        id: Qui nihil.
+        screenImageUrl: Tempore voluptas cumque voluptatem aut facere.
+        title: Alias incidunt sunt ut veniam.
+    required:
+    - posts
+    - count
   PostsSearchResponseBody:
     title: PostsSearchResponseBody
     type: object
     properties:
       page:
         type: integer
-        example: 11722563091969807652
+        example: 2215612457498736729
         format: int64
       posts:
         $ref: '#/definitions/PostOutputResponseBodyCollection'
       totalPage:
         type: integer
-        example: 10567603210849653830
+        example: 14151283819490208690
         format: int64
     example:
-      page: 1935181647436417946
+      page: 16573824922741616287
       posts:
       - description: Assumenda nesciunt nesciunt quasi voluptates perferendis.
         id: Qui nihil.
@@ -240,7 +296,7 @@ definitions:
         id: Qui nihil.
         screenImageUrl: Tempore voluptas cumque voluptatem aut facere.
         title: Alias incidunt sunt ut veniam.
-      totalPage: 2589240082658054592
+      totalPage: 981018779888932699
     required:
     - posts
     - page
